--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,13 @@ $RECYCLE.BIN/
 # Images
 *.png
 *.jpg
+
+
+#b.c.a.5506
+#b.c.v.768 
+#b.c.m.046
+#b.d.m.419
+#n.d.m.app 
+#n.c.m.601 
+#abn.d.827 
+#w.d.v.482
